--- a/styles/champion-container.css
+++ b/styles/champion-container.css
@@ -12,17 +12,16 @@
 }
 
 .spell {
-    width: 30px;
-    height: 30px;
+    width: 1.7rem;
+    height: 1.7rem;
 }
 
 .img-champion {
-    width: 50px;
-    height: 50px;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 50%;
     margin: 0 1rem;
     transition: .4s;
-    transform: rotate(0);
 }
 
 .status {
