--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,7 +1,45 @@
+@media(max-width: 2400px) {
+    .select {
+        width: 100%;
+        overflow-y: auto;
+        height: 72vh;
+        margin-top: 1%;
+        display: grid;
+        grid-template-columns: repeat(6, 5rem);
+        grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+        justify-content: center;
+    }
+    .champion-container,
+    .red-team .champion-container {
+        margin: 3rem 1rem 1rem 1rem;
+        padding: 2rem;
+    }
+    .red-team .champion-container {
+        padding: 2rem !important;
+    }
+    .select img {
+        width: 5rem;
+        height: 5rem;
+        margin: 1rem;
+    }
+    section.main {
+        width: 100%;
+        height: 70vh;
+        display: grid;
+        grid-template-columns: 1fr minmax(30rem, 45rem) 1fr;
+    }
+    .red-team .status {
+        margin-left: 60%;
+    }
+}
+
 @media(max-width: 1600px) {
     .champion-container,
     .red-team .champion-container {
         margin: 2rem 1rem 1rem 1rem;
+    }
+    .red-team .status {
+        margin-left: 50%;
     }
 }
 
@@ -9,6 +47,18 @@
     .champion-container,
     .red-team .champion-container {
         margin: 1rem 1rem 1rem 1rem;
+        padding: .8rem;
+    }
+    .red-team .champion-container {
+        padding: 1rem !important;
+    }
+    section.main {
+        grid-template-columns: 1fr minmax(30rem, 35rem) 1fr;
+    }
+    .select img {
+        width: 4rem;
+        height: 4rem;
+        margin: 10px;
     }
 }
 
