--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,12 +1,12 @@
 @media(max-width: 2400px) {
     .select {
-        width: 100%;
+        width: 90%;
         overflow-y: auto;
         height: 72vh;
         margin-top: 1%;
         display: grid;
         grid-template-columns: repeat(6, 5rem);
-        grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(5.5rem, 1fr));
         justify-content: center;
     }
     .champion-container,
@@ -44,6 +44,9 @@
 }
 
 @media(max-width: 1368px) {
+    .select {
+        height: 65vh;
+    }
     .champion-container,
     .red-team .champion-container {
         margin: 1rem 1rem 1rem 1rem;
@@ -56,9 +59,9 @@
         grid-template-columns: 1fr minmax(30rem, 35rem) 1fr;
     }
     .select img {
-        width: 4rem;
-        height: 4rem;
-        margin: 10px;
+        width: 4.1rem;
+        height: 4.1rem;
+        margin: 9px;
     }
 }
 
