--- a/styles/champion-container.css
+++ b/styles/champion-container.css
@@ -17,8 +17,8 @@
 }
 
 .img-champion {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
     margin: 0 1rem;
     transition: .4s;
@@ -32,6 +32,7 @@
 
 .status span {
     color: #C09F3A;
+    font-size: 1rem;
 }
 
 .champion-spell {
