--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,6 +1,6 @@
 @media(max-width: 2400px) {
     .select {
-        width: 90%;
+        width: 100%;
         overflow-y: auto;
         height: 72vh;
         margin-top: 1%;
@@ -31,6 +31,13 @@
     .red-team .status {
         margin-left: 60%;
     }
+    .img-champion {
+        width: 3rem;
+        height: 3rem;
+    }
+    .status span {
+        font-size: 1.7rem;
+    }
 }
 
 @media(max-width: 1600px) {
@@ -40,6 +47,13 @@
     }
     .red-team .status {
         margin-left: 50%;
+    }
+    .img-champion {
+        width: 2rem;
+        height: 2rem;
+    }
+    .status span {
+        font-size: 1rem;
     }
 }
 
