--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -1,107 +1,108 @@
-@media(max-width: 2400px) {
+@media (max-width: 2400px) {
     .select {
-        width: 100%;
-        overflow-y: auto;
-        height: 72vh;
-        margin-top: 1%;
-        display: grid;
-        grid-template-columns: repeat(6, 5rem);
-        grid-template-columns: repeat(auto-fit, minmax(5.5rem, 1fr));
-        justify-content: center;
+      width: 100%;
+      overflow-y: auto;
+      height: 72vh;
+      margin-top: 1%;
+      display: grid;
+      grid-template-columns: repeat(6, 5rem);
+      grid-template-columns: repeat(auto-fit, minmax(5.5rem, 1fr));
+      justify-content: center;
     }
     .champion-container,
     .red-team .champion-container {
-        margin: 3rem 1rem 1rem 1rem;
-        padding: 2rem;
+      margin: 1rem;
+      padding: 1.3rem;
     }
     .red-team .champion-container {
-        padding: 2rem !important;
+      padding: 1.15rem !important;
     }
     .select img {
-        width: 5rem;
-        height: 5rem;
-        margin: 1rem;
+      width: 5.2rem;
+      height: 5.2rem;
+      margin: 1rem 2rem;
     }
     section.main {
-        width: 100%;
-        height: 70vh;
-        display: grid;
-        grid-template-columns: 1fr minmax(30rem, 45rem) 1fr;
+      width: 100%;
+      height: 70vh;
+      display: grid;
+      grid-template-columns: 1fr minmax(30rem, 45rem) 1fr;
     }
     .red-team .status {
-        margin-left: 60%;
+      margin-left: 60%;
     }
     .img-champion {
-        width: 3rem;
-        height: 3rem;
+      width: 3rem;
+      height: 3rem;
     }
     .status span {
-        font-size: 1.7rem;
+      font-size: 1.7rem;
     }
-}
-
-@media(max-width: 1600px) {
+  }
+  
+  @media (max-width: 1600px) {
     .champion-container,
     .red-team .champion-container {
-        margin: 2rem 1rem 1rem 1rem;
+      margin: 1rem 1rem 1rem 1rem;
     }
     .red-team .status {
-        margin-left: 50%;
+      margin-left: 50%;
     }
     .img-champion {
-        width: 2rem;
-        height: 2rem;
+      width: 2rem;
+      height: 2rem;
     }
     .status span {
-        font-size: 1rem;
+      font-size: 1rem;
     }
-}
-
-@media(max-width: 1368px) {
+  }
+  
+  @media (max-width: 1368px) {
     .select {
-        height: 65vh;
+      height: 65vh;
     }
     .champion-container,
     .red-team .champion-container {
-        margin: 1rem 1rem 1rem 1rem;
-        padding: .8rem;
+      margin: 1rem 1rem 1rem 1rem;
+      padding: 0.8rem;
     }
     .red-team .champion-container {
-        padding: 1rem !important;
+      padding: 1rem !important;
     }
     section.main {
-        grid-template-columns: 1fr minmax(30rem, 35rem) 1fr;
+      grid-template-columns: 1fr minmax(30rem, 35rem) 1fr;
     }
     .select img {
-        width: 4.1rem;
-        height: 4.1rem;
-        margin: 9px;
+      width: 4.1rem;
+      height: 4.1rem;
+      margin: 9px;
     }
-}
-
-@media(max-width: 882px) {
+  }
+  
+  @media (max-width: 882px) {
     .social-medias {
-        display: none;
+      display: none;
     }
     .champion-container {
-        display: none;
+      display: none;
     }
     .mapa {
-        display: none;
+      display: none;
     }
     .spin {
-        display: none;
+      display: none;
     }
     .loader {
-        position: absolute;
-        z-index: -2;
-        opacity: .07;
-        left: 25%;
-        top: 30rem;
-        width: 50%;
-        margin-top: 13rem;
+      position: absolute;
+      z-index: -2;
+      opacity: 0.07;
+      left: 25%;
+      top: 30rem;
+      width: 50%;
+      margin-top: 13rem;
     }
     .action-buttons {
-        display: none;
+      display: none;
     }
-}
+  }
+  
